--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,16 @@ jobs:
     # run tests!
     - run: mvn --show-version verify
 
-    - store-test-results:
-        path: target/surefire-reports
+    - run:
+        name: Save test results
+        command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+            find . -type f -regex ".*/target/failsafe-reports/.*xml" -exec cp {} ~/junit/ \;
+        when: always
 
-    - store-test-results:
-        path: target/failsafe-reports
+    - store_test_results:
+      path: ~/junit
+
+    - store_artifacts:
+      path: ~/junit
