--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,9 @@ jobs:
     - run:
         name: Save test results
         command: |
-            mkdir -p ~/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
-            find . -type f -regex ".*/target/failsafe-reports/.*xml" -exec cp {} ~/junit/ \;
+          mkdir -p ~/junit/
+          find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+          find . -type f -regex ".*/target/failsafe-reports/.*xml" -exec cp {} ~/junit/ \;
         when: always
 
     - store_test_results:
@@ -53,3 +53,7 @@ jobs:
 
     - store_artifacts:
         path: ~/junit
+
+    - run:
+        name: Send to CodeCov
+        command: bash <(curl -s https://codecov.io/bash)
