--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,11 @@ jobs:
         key: v1-dependencies-{{ checksum "pom.xml" }}
 
     # run tests!
-    - run: mvn --show-version verify cobertura:cobertura
+    - run: mvn --show-version verify
+
+    - run:
+        name: Send to CodeCov
+        command: bash <(curl -s https://codecov.io/bash)
 
     - run:
         name: Save test results
@@ -54,6 +58,3 @@ jobs:
     - store_artifacts:
         path: ~/junit
 
-    - run:
-        name: Send to CodeCov
-        command: bash <(curl -s https://codecov.io/bash)
