switch to mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 logging.level.codegeeks.spring5recipe=info
-spring.jpa.show-sql=true
+spring.data.mongodb.port=0
+spring.data.mongodb.host=localhost
