--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
     environment:
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
+      TERM: dumb
 
     steps:
     - checkout
@@ -26,30 +27,25 @@ jobs:
     # Download and cache dependencies
     - restore_cache:
         keys:
-        - v1-dependencies-{{ checksum "pom.xml" }}
+        - v1-dependencies-{{ checksum "build.gradle" }}
         # fallback to using the latest cache if no exact match is found
         - v1-dependencies-
 
-    - run: mvn dependency:go-offline
+    - run: gradle dependencies
 
     - save_cache:
         paths:
         - ~/.m2
-        key: v1-dependencies-{{ checksum "pom.xml" }}
+        key: v1-dependencies-{{ checksum "build.gradle" }}
 
     # run tests!
-    - run: mvn --show-version verify
-
-    - run:
-        name: Send to CodeCov
-        command: bash <(curl -s https://codecov.io/bash)
+    - run: ./gradlew clean test jacocoTestReport
 
     - run:
         name: Save test results
         command: |
           mkdir -p ~/junit/
-          find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
-          find . -type f -regex ".*/target/failsafe-reports/.*xml" -exec cp {} ~/junit/ \;
+          find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
         when: always
 
     - store_test_results:
@@ -58,3 +54,6 @@ jobs:
     - store_artifacts:
         path: ~/junit
 
+    - run:
+        name: Send to CodeCov
+        command: bash <(curl -s https://codecov.io/bash)
