--- a/build.gradle
+++ b/build.gradle
@@ -40,12 +40,14 @@ dependencies {
     compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
     runtime('org.springframework.boot:spring-boot-devtools')
     compileOnly('org.projectlombok:lombok')
     compile group: 'org.webjars', name: 'bootstrap', version:'4.1.3'
     compile group: 'org.webjars', name: 'jquery', version:'3.3.1'
     compile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('io.projectreactor:reactor-test')
 }
 
 jacocoTestReport {
